mvp hw-3