@@ -1,15 +1,12 @@
-/*
 package com.ylab.intensive.service.impl;
 
 import com.ylab.intensive.dao.WorkoutDao;
 import com.ylab.intensive.exception.NotFoundException;
-import com.ylab.intensive.exception.TrainingTypeException;
-import com.ylab.intensive.model.dto.UserDto;
-import com.ylab.intensive.model.dto.WorkoutDto;
+import com.ylab.intensive.model.dto.*;
 import com.ylab.intensive.model.entity.User;
 import com.ylab.intensive.model.entity.Workout;
-import com.ylab.intensive.mapper.WorkoutMapper;
-import com.ylab.intensive.service.AuditService;
+import com.ylab.intensive.model.entity.WorkoutInfo;
+import com.ylab.intensive.model.entity.WorkoutType;
 import com.ylab.intensive.service.WorkoutInfoService;
 import com.ylab.intensive.service.WorkoutTypeService;
 import org.junit.jupiter.api.DisplayName;
@@ -20,8 +17,8 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
-import org.testcontainers.shaded.com.trilead.ssh2.Session;
 
+import java.time.Duration;
 import java.time.LocalDate;
 import java.util.*;
 
@@ -46,16 +43,7 @@ class WorkoutServiceImplTest {
     private WorkoutInfoService workoutInfoService;
 
     @Mock
-    private AuditService auditService;
-
-    @Mock
-    private WorkoutMapper workoutMapper;
-
-    @Mock
-    private Session authorizedUser;
-
-    @Mock
-    private UserServiceImpl userManagementService;
+    private UserServiceImpl userService;
 
     @InjectMocks
     private WorkoutServiceImpl workoutService;
@@ -63,251 +51,134 @@ class WorkoutServiceImplTest {
     @Test
     @DisplayName("Add training type - success")
     void testAddTrainingType_Success() {
-        String date = "01-01-2022";
-        String typeName = "Cardio";
-        Workout workout = new Workout();
-        workout.setId(1);
-        String email = "test@email.com";
-        UserDto userDto = new UserDto();
-        userDto.setEmail(email);
-        User user = new User();
-        user.setId(1);
-        user.setEmail(email);
-
-        when(workoutDao.findByDate(LocalDate.parse("2022-01-01"), 1)).thenReturn(Optional.of(workout));
-        when(workoutTypeService.findByWorkoutId(anyInt())).thenReturn(Set.of());
-        doNothing().when(workoutTypeService).saveType(anyInt(), anyString());
-        doNothing().when(auditService).saveAction(anyInt(), anyString());
-        when(authorizedUser.getAttribute("authorizedUser")).thenReturn(userDto);
-        when(userManagementService.findByEmail(email)).thenReturn(Optional.of(user));
-
-        workoutService.addTrainingType(date, typeName);
-
-        verify(auditService).saveAction(anyInt(), anyString());
-    }
-
-    @Test
-    @DisplayName("Add training type - training already exists")
-    void testAddTrainingType_TypeExists() {
-        String date = "01-01-2022";
         String typeName = "Cardio";
         String email = "test@email.com";
-        UserDto userDto = new UserDto();
-        userDto.setEmail(email);
         User user = new User();
         user.setId(1);
-        user.setEmail(email);
 
-        when(authorizedUser.getAttribute("authorizedUser")).thenReturn(userDto);
-        when(userManagementService.findByEmail(email)).thenReturn(Optional.of(user));
-        when(workoutDao.findByDate(LocalDate.parse("2022-01-01"), 1)).thenReturn(Optional.of(new Workout()));
-        when(workoutTypeService.findByWorkoutId(anyInt())).thenReturn(Set.of(typeName));
+        when(userService.findByEmail(email)).thenReturn(Optional.of(user));
+        when(workoutTypeService.saveType(1, typeName)).thenReturn(new WorkoutType());
 
-        assertThatThrownBy(() -> workoutService.addTrainingType(date, typeName))
-                .isInstanceOf(TrainingTypeException.class)
-                .hasMessageContaining("Такой тип тренировки уже существует в " + date);
+        workoutService.saveWorkoutType(email, typeName);
+
+        verify(workoutTypeService).saveType(1, typeName);
     }
 
     @Test
     @DisplayName("Add workout info - success")
     void testAddWorkoutInfo_Success() {
-        String date = "01-01-2022";
-        String title = "Title";
-        String info = "Info";
-        String email = "test@email.com";
-        UserDto userDto = new UserDto();
-        userDto.setEmail(email);
+        String uuid = "123e4567-e89b-12d3-a456-426614174001";
+        WorkoutInfoDto workoutInfo = new WorkoutInfoDto();
+        workoutInfo.setWorkoutInfo(Map.of("title","info"));
         User user = new User();
         user.setId(1);
-        user.setEmail(email);
+        Workout workoutMy = getWorkout();
+        workoutMy.setType("1");
 
-        when(authorizedUser.getAttribute("authorizedUser")).thenReturn(userDto);
-        when(userManagementService.findByEmail(email)).thenReturn(Optional.of(user));
-        when(workoutDao.findByDate(LocalDate.parse("2022-01-01"), 1)).thenReturn(Optional.of(new Workout()));
+        when(workoutDao.findByUUID(UUID.fromString(uuid))).thenReturn(Optional.of(workoutMy));
+        when(workoutTypeService.findById(1)).thenReturn(new WorkoutType());
         doNothing().when(workoutInfoService).saveWorkoutInfo(anyInt(), anyString(), anyString());
-        doNothing().when(auditService).saveAction(anyInt(), anyString());
 
-        workoutService.addWorkoutInfo(date, title, info);
+        Workout workout = workoutService.addWorkoutInfo(uuid, workoutInfo);
 
-        verify(auditService).saveAction(anyInt(), anyString());
+        assertThat(workout.getWorkoutInfo())
+                .isEqualTo(workoutInfo.getWorkoutInfo());
     }
 
     @Test
     @DisplayName("Add workout info - workout not found")
     void testAddWorkoutInfo_WorkoutNotFound() {
-        String date = "01-01-2022";
-        String title = "Title";
-        String info = "Info";
-        String email = "test@email.com";
-        UserDto userDto = new UserDto();
-        userDto.setEmail(email);
-        User user = new User();
-        user.setId(1);
-        user.setEmail(email);
+        String uuid = "123e4567-e89b-12d3-a456-426614174001";
 
-        when(authorizedUser.getAttribute("authorizedUser")).thenReturn(userDto);
-        when(userManagementService.findByEmail(email)).thenReturn(Optional.of(user));
-        when(workoutDao.findByDate(LocalDate.parse("2022-01-01"), 1)).thenReturn(Optional.empty());
-        doNothing().when(auditService).saveAction(anyInt(), anyString());
+        when(workoutDao.findByUUID(UUID.randomUUID())).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() -> workoutService.addWorkoutInfo(date, title, info))
+        assertThatThrownBy(() -> workoutService.addWorkoutInfo(uuid, new WorkoutInfoDto()))
                 .isInstanceOf(NotFoundException.class)
-                .hasMessageContaining("Тренировка в " + date + " не проводилось! Сначала добавьте ее.");
+                .hasMessageContaining("Тренировка с uuid = "+uuid+" нет в базе данных! Сначала добавьте ее.");
     }
 
     @Test
     @DisplayName("Get all user workouts - success")
     void testGetAllUserWorkouts_Success() {
-        List<Workout> mockWorkouts = Arrays.asList(Workout.builder().id(1).date(LocalDate.now()).build(),
-                Workout.builder().id(2).date(LocalDate.now()).build());
+        Workout workout = getWorkout();
+        workout.setId(1);
+        workout.setType("1");
+        Workout workout2 = getWorkout();
+        workout2.setId(2);
+        workout2.setType("1");
+        List<Workout> mockWorkouts = List.of(workout,workout2);
         String email = "test@email.com";
-        UserDto userDto = new UserDto();
-        userDto.setEmail(email);
         User user = new User();
         user.setId(1);
-        user.setEmail(email);
+        WorkoutType workoutType = new WorkoutType();
+        workoutType.setType("1");
 
-        when(authorizedUser.getAttribute("authorizedUser")).thenReturn(userDto);
-        when(userManagementService.findByEmail(email)).thenReturn(Optional.of(user));
+        when(userService.findByEmail(email)).thenReturn(Optional.of(user));
         when(workoutDao.findByUserId(1)).thenReturn(mockWorkouts);
-        when(workoutTypeService.findByWorkoutId(anyInt())).thenReturn(Set.of());
-        when(workoutInfoService.getInfoByWorkoutId(anyInt())).thenReturn(Collections.emptyMap());
-        doNothing().when(auditService).saveAction(anyInt(), anyString());
+        when(workoutTypeService.findById(anyInt())).thenReturn(workoutType);
+        when(workoutInfoService.getInfoByWorkoutId(anyInt())).thenReturn(new WorkoutInfo());
 
-        List<Workout> result = workoutService.getAllUserWorkouts();
+        List<WorkoutDto> result = workoutService.getAllUserWorkouts(email);
 
         assertThat(result).hasSize(2);
-    }
-
-    @Test
-    @DisplayName("Get workout by date - success")
-    void testGetWorkoutByDate_Success() {
-        String date = "01-01-2022";
-        String email = "test@email.com";
-        Workout workout = Workout.builder().id(1).date(LocalDate.now()).build();
-        UserDto userDto = new UserDto();
-        userDto.setEmail(email);
-        User user = new User();
-        user.setId(1);
-        user.setEmail(email);
-
-        when(authorizedUser.getAttribute("authorizedUser")).thenReturn(userDto);
-        when(userManagementService.findByEmail(email)).thenReturn(Optional.of(user));
-        when(workoutDao.findByDate(LocalDate.parse("2022-01-01"), 1)).thenReturn(Optional.of(workout));
-        when(workoutTypeService.findByWorkoutId(anyInt())).thenReturn(Set.of());
-        when(workoutInfoService.getInfoByWorkoutId(anyInt())).thenReturn(Collections.emptyMap());
-        when(workoutMapper.entityToDto(workout)).thenReturn(new WorkoutDto());
-
-        WorkoutDto result = workoutService.getWorkoutByDate(date);
-
-        assertThat(result).isNotNull();
     }
 
     @Test
     @DisplayName("Update type - success")
     void testUpdateType_Success() {
-        WorkoutDto workoutDto = new WorkoutDto();
-        workoutDto.setDate(LocalDate.now());
-        Workout workout = Workout.builder().id(1).date(LocalDate.now()).build();
-        String oldType = "OldType";
+        WorkoutType workout = new WorkoutType();
+        workout.setId(2);
+        workout.setType("cardio");
+        WorkoutType workout2 = new WorkoutType();
+        workout2.setId(1);
         String newType = "NewType";
-        String email = "test@email.com";
-        UserDto userDto = new UserDto();
-        userDto.setEmail(email);
-        User user = new User();
-        user.setId(1);
-        user.setEmail(email);
+        workout2.setType(newType);
 
-        when(authorizedUser.getAttribute("authorizedUser")).thenReturn(userDto);
-        when(userManagementService.findByEmail(email)).thenReturn(Optional.of(user));
-        when(workoutDao.findByDate(workoutDto.getDate(), 1)).thenReturn(Optional.of(workout));
+        when(workoutTypeService.findByUserId(1)).thenReturn(List.of(workout,workout2));
 
-        workoutService.updateType(workoutDto, oldType, newType);
+        workoutService.updateType(1, 1, newType);
 
-        verify(workoutTypeService).updateType(1, oldType, newType);
-        verify(auditService).saveAction(1, "Пользователь редактировал тип тренировки с OldType на NewType");
+        verify(workoutDao).updateType(1, 1);
     }
 
     @Test
     @DisplayName("Update duration - success")
     void testUpdateDuration_Success() {
-        WorkoutDto workoutDto = new WorkoutDto();
-        workoutDto.setDate(LocalDate.parse("2022-01-01"));
-        String durationStr = "1:5:24";
-        Workout workout = Workout.builder().id(1).date(LocalDate.parse("2022-01-01")).build();
-        String email = "test@email.com";
-        UserDto userDto = new UserDto();
-        userDto.setEmail(email);
-        User user = new User();
-        user.setId(1);
-        user.setEmail(email);
+        Duration duration = Duration.ofHours(1)
+                .plusMinutes(50)
+                .plusSeconds(1);
+        doNothing().when(workoutDao).updateDuration(1,duration);
 
-        when(authorizedUser.getAttribute("authorizedUser")).thenReturn(userDto);
-        when(userManagementService.findByEmail(email)).thenReturn(Optional.of(user));
-        when(workoutDao.findByDate(LocalDate.parse("2022-01-01"), 1)).thenReturn(Optional.of(workout));
+        workoutService.updateDuration(1,1, duration);
 
-        workoutService.updateDuration(workoutDto, durationStr);
-
-        verify(auditService).saveAction(1, "Пользователь редактировал длительность тренировки, теперь " + durationStr);
+        verify(workoutDao).updateDuration(1,duration);
     }
 
     @Test
     @DisplayName("Update calories - success")
     void testUpdateCalories_Success() {
-        WorkoutDto workoutDto = new WorkoutDto();
-        workoutDto.setDate(LocalDate.parse("2022-01-01"));
-        String calories = "300";
-        Workout workout = Workout.builder().id(1).date(LocalDate.parse("2022-01-01")).build();
-        String email = "test@email.com";
-        UserDto userDto = new UserDto();
-        userDto.setEmail(email);
-        User user = new User();
-        user.setId(1);
-        user.setEmail(email);
-
-        when(authorizedUser.getAttribute("authorizedUser")).thenReturn(userDto);
-        when(userManagementService.findByEmail(email)).thenReturn(Optional.of(user));
-        when(workoutDao.findByDate(LocalDate.parse("2022-01-01"), 1)).thenReturn(Optional.of(workout));
         doNothing().when(workoutDao).updateCalorie(anyInt(), anyFloat());
-        doNothing().when(auditService).saveAction(anyInt(), anyString());
 
-        workoutService.updateCalories(workoutDto, calories);
+        workoutService.updateCalories(1,1,1f);
 
-        verify(auditService).saveAction(anyInt(), anyString());
+        verify(workoutDao).updateCalorie(anyInt(), anyFloat());
     }
 
     @Test
     @DisplayName("Update additional info - success")
     void testUpdateAdditionalInfo_Success() {
-        WorkoutDto workoutDto = new WorkoutDto();
-        workoutDto.setDate(LocalDate.parse("2022-01-01"));
-        workoutDto.setInfo(new HashMap<>());
-        String title = "Title";
-        String info = "Info";
-        workoutDto.getInfo().put(title, info);
-        Workout workout = Workout.builder().id(1).date(LocalDate.parse("2022-01-01")).build();
-        String email = "test@email.com";
-        UserDto userDto = new UserDto();
-        userDto.setEmail(email);
-        User user = new User();
-        user.setId(1);
-        user.setEmail(email);
-
-        when(authorizedUser.getAttribute("authorizedUser")).thenReturn(userDto);
-        when(userManagementService.findByEmail(email)).thenReturn(Optional.of(user));
-        when(workoutDao.findByDate(LocalDate.parse("2022-01-01"), 1)).thenReturn(Optional.of(workout));
         doNothing().when(workoutInfoService).updateWorkoutInfo(anyInt(), anyString(), anyString());
-        doNothing().when(auditService).saveAction(anyInt(), anyString());
 
-        workoutService.updateAdditionalInfo(workoutDto, title, info);
+        workoutService.updateAdditionalInfo(1, 1, Map.of("title","info"));
 
-        verify(auditService).saveAction(anyInt(), anyString());
+        verify(workoutInfoService).updateWorkoutInfo(anyInt(), anyString(), anyString());
     }
 
     @Test
     @DisplayName("Delete workout - success")
     void testDeleteWorkout_Success() {
-        String date = "01-01-2022";
+        Workout workout = getWorkout();
+        String uuid = "123e4567-e89b-12d3-a456-426614174001";
         String email = "test@email.com";
         UserDto userDto = new UserDto();
         userDto.setEmail(email);
@@ -315,57 +186,69 @@ class WorkoutServiceImplTest {
         user.setId(1);
         user.setEmail(email);
 
-        when(authorizedUser.getAttribute("authorizedUser")).thenReturn(userDto);
-        when(userManagementService.findByEmail(email)).thenReturn(Optional.of(user));
-        when(workoutDao.findByDate(LocalDate.parse("2022-01-01"), 1)).thenReturn(Optional.of(new Workout()));
-        doNothing().when(workoutTypeService).delete(anyInt());
+        when(userService.findByEmail(email)).thenReturn(Optional.of(user));
+        when(workoutDao.findByUUID(UUID.fromString(uuid))).thenReturn(Optional.of(workout));
         doNothing().when(workoutInfoService).delete(anyInt());
-        doNothing().when(workoutDao).deleteWorkout(LocalDate.parse("2022-01-01"), 1);
-        doNothing().when(auditService).saveAction(anyInt(), anyString());
+        doNothing().when(workoutDao).deleteWorkout(1, 1);
 
-        workoutService.deleteWorkout(date);
+        workoutService.deleteWorkout(email, uuid);
 
-        verify(auditService).saveAction(anyInt(), anyString());
+        verify(workoutInfoService).delete(anyInt());
+        verify(workoutDao).deleteWorkout(1,1);
     }
 
     @Test
     @DisplayName("Get workout statistics - success")
     void testGetWorkoutStatistics_Success() {
+        Workout workout = getWorkout();
         String email = "test@email.com";
         String begin = "01-01-2022";
         String end = "02-01-2022";
-        UserDto userDto = new UserDto();
-        userDto.setEmail(email);
         User user = new User();
         user.setId(1);
-        user.setEmail(email);
 
         when(workoutDao.findByDuration(1, LocalDate.parse("2022-01-01"), LocalDate.parse("2022-01-02")))
-                .thenReturn(Arrays.asList(Workout.builder().id(1).date(LocalDate.now()).calorie(123f).build(),
-                        Workout.builder().id(2).date(LocalDate.now()).calorie(123f).build()));
-        doNothing().when(auditService).saveAction(1, "Пользователь просмотрел статистику по тренировкам за период " + begin + " -- " + end);
-        when(authorizedUser.getAttribute("authorizedUser")).thenReturn(userDto);
-        when(userManagementService.findByEmail(email)).thenReturn(Optional.of(user));
+                .thenReturn(Arrays.asList(workout, workout));
+        when(userService.findByEmail(email)).thenReturn(Optional.of(user));
 
-        int result = workoutService.getWorkoutStatistics(begin, end);
+        StatisticsDto result = workoutService.getWorkoutStatistics(email, begin, end);
 
-        assertThat(result).isEqualTo(246);
+        assertThat(result.getSumCalorie()).isEqualTo(246);
     }
 
     @Test
     @DisplayName("Get all users workouts - success")
     void testGetAllUsersWorkouts_Success() {
-        List<User> mockUsers = Arrays.asList(new User(), new User());
-        List<Workout> mockWorkouts = Arrays.asList(new Workout(), new Workout());
+        User user = new User();
+        user.setId(1);
+        List<User> mockUsers = List.of(user, user);
+        Workout workout = getWorkout();
+        workout.setId(1);
+        workout.setType("1");
+        List<Workout> mockWorkouts = List.of(workout, workout);
+        WorkoutType workoutType = new WorkoutType();
+        workoutType.setType("1");
+        WorkoutInfo workoutInfo = new WorkoutInfo();
+        workoutInfo.setWorkoutInfo(Map.of("title","key"));
 
-        when(workoutDao.findByUserId(anyInt())).thenReturn(mockWorkouts);
-        when(workoutTypeService.findByWorkoutId(anyInt())).thenReturn(Set.of());
-        when(workoutInfoService.getInfoByWorkoutId(anyInt())).thenReturn(Collections.emptyMap());
+        when(workoutDao.findByUserId(1)).thenReturn(mockWorkouts);
+        when(workoutTypeService.findById(1)).thenReturn(workoutType);
+        when(workoutInfoService.getInfoByWorkoutId(1)).thenReturn(workoutInfo);
 
         List<User> result = workoutService.getAllUsersWorkouts(mockUsers);
 
-        assertThat(result).hasSize(2);
+        verify(workoutTypeService,times(4)).findById(1);
+        verify(workoutInfoService,times(4)).getInfoByWorkoutId(1);
+    }
+
+    private Workout getWorkout() {
+        Workout workout = new Workout();
+        workout.setId(1);
+        workout.setType("cardio");
+        workout.setWorkoutInfo(new HashMap<>());
+        workout.setDate(LocalDate.parse("2022-01-01"));
+        workout.setCalorie(123.0f);
+        return workout;
     }
 
 }
-*/
